Small fix with popup z-index.

--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -15,7 +15,7 @@
 }
 
 .visible {
-    z-index:9999999;
+    z-index:999999999;
     opacity:1;
 }
 
